**  denotes quite substantial/important changes
*** denotes really big changes 
ISSUES:

1.7-3

* Efficiency of Lanczos iteration code improved, by restructuring, and 
  calling LAPACK for the eigen decompostion of the working tri-diagonal
  matrix.

* Slight modification to `t2' marginal reparameterization, so that `main 
  effects' can be extracted more easily, if required.

1.7-2

* `polys.plot' now exported, to facilitate plotting of results for
  models involving mrf terms.

* bug fix in plot.gam --- too.far had stopped working in 1.7-0.

1.7-1

* post fitting constraint modification would fail if model matrix was 
  rank deficient until penalized. This was an issue when mixing new t2 
  terms with "re" type random effects. Fixed.

* plot.mrf.smooth bug fix. There was an implicit assumption that the
  `polys' list was ordered in the same way as the levels of the covariate
  of the smooth. fixed. 

* gam.side intercept detection could occasionally fail. Improved.

* concurvity would fail if model matrix contained NA's. Fixed.

1.7-0

** `t2' alternative tensor product smooths added. These can be used with 
  gamm4. 

** "mrf" smooth class added (at the suggestion of Thomas Kneib). 
   Implements smoothing over discrete geographic districts using a
   Markov random field penalty. See ?mrf

* qq.gam added to allow better checking of distribution of residuals.

* gam.check modified to use qq.gam for QQ plots of deviance residuals.
  Also, it now works with gam(*, na.action = "na.replace") and NAs.

* `concurvity' function added to provide simple concurvity measures.

* plot.gam automatic layout modified to be a bit more sensible (i.e.
  to recognise that most screens are landscape, and that usually 
  squarish plots are wanted). 

* Plot method added for mrf smooths. 

* in.out function added to test whether points are interior to 
  a region defined by a set of polygons. Useful when working with 
  MRFs.
